# kivy2x

./: .gitignore  pyproject.toml  setup.py  test-app
.github/workflows/: kivy2x_release.yml
extra/android/: .gitignore  pyproject.toml  setup.py
extra/android/scripts/: before_build_android.py
extra/android/src/android/: _android_sound_jni.c  config.h  config.pxi  config.py
extra/android/src/android.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
kivy/: _version.py  clock.py  utils.py
kivy/core/camera/: camera_avfoundation_implem.h  camera_avfoundation_implem.mm
kivy/core/window/: _window_sdl2.pyx
kivy/graphics/: cgl.pyx  opengl.pyx
kivy/graphics/cgl_backend/: cgl_angle.pyx
kivy/graphics/egl_backend/: egl_angle.pxd  egl_angle.pyx  egl_angle_metal.pxd  egl_angle_metal.pyx  egl_angle_metal_implem.h  egl_angle_metal_implem.mm
kivy/lib/: sdl2.pxi
test_app/: pyproject.toml
test_app/src/test_app/: app.kv  app.py
tools/: add-android-libs.py  build_android_dependencies.sh  build_ios_dependencies.sh  build_macos_dependencies.sh  inject-android-package.py
