[project]
name = "Kivy"
version = "2.3.1.post1"
description = "An open-source Python framework for developing GUI apps that work cross-platform, including desktop, mobile and embedded platforms."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Kivy Team and other contributors", email = "kivy-dev@googlegroups.com" },
]
requires-python = ">=3.13"
dependencies = [
    "Kivy-Garden>=0.1.4",
    "docutils",
    "pygments",
    "requests",
    "filetype",
    "kivy_deps.angle~=0.4.0; sys_platform == 'win32'",
    "kivy_deps.sdl2~=0.8.0; sys_platform == 'win32'",
    "kivy_deps.glew~=0.3.1; sys_platform == 'win32'",
    "pypiwin32; sys_platform == 'win32'",

    "pyjnius; sys_platform == 'android'",
    #"android; sys_platform == 'android'",
    "pyobjus; sys_platform == 'ios'",
]

[project.urls]
Homepage = "http://kivy.org"
Source = "https://github.com/kivy/kivy"
Documentation = "https://kivy.org/doc/stable/"
"Bug Reports" = "https://github.com/kivy/kivy/issues"

[project.optional-dependencies]
tuio = ["oscpy"]
base = ["pillow>=9.5.0,<11"]
media = [
    "kivy_deps.gstreamer~=0.3.3; sys_platform == 'win32'",
    "ffpyplayer; sys_platform == 'linux' or sys_platform == 'darwin'",
]
full = [
    "pillow>=9.5.0,<11",
    "kivy_deps.gstreamer~=0.3.3; sys_platform == 'win32'",
    "ffpyplayer; sys_platform == 'linux' or sys_platform == 'darwin'",
]
dev = [
    "pytest>=3.6",
    "pytest-cov",
    "pytest_asyncio!=0.11.0",
    "pytest-timeout",
    "pytest-benchmark",
    "pyinstaller",
    "sphinx~=6.2.1",
    "sphinxcontrib-jquery~=4.1",
    "kivy_deps.gstreamer_dev~=0.3.3; sys_platform == 'win32'",
    "kivy_deps.sdl2_dev~=0.8.0; sys_platform == 'win32'",
    "kivy_deps.glew_dev~=0.3.1; sys_platform == 'win32'",
    "flake8",
    "pre-commit",
    "responses",
]

[build-system]
requires = [
    "setuptools~=69.2.0",
    "wheel~=0.44.0",
    "packaging>=24.0",
    "cython>=0.29.1,<=3.0.11",
    'kivy_deps.gstreamer_dev~=0.3.3; sys_platform == "win32"',
    'kivy_deps.sdl2_dev~=0.8.0; sys_platform == "win32"',
    'kivy_deps.glew_dev~=0.3.1; sys_platform == "win32"',
    'kivy_deps.gstreamer~=0.3.3; sys_platform == "win32"',
    'kivy_deps.sdl2~=0.8.0; sys_platform == "win32"',
    'kivy_deps.glew~=0.3.1; sys_platform == "win32"',
]

[tool.pytest.ini_options]
addopts = "--benchmark-skip --benchmark-warmup=on --benchmark-warmup-iterations=5 --benchmark-disable-gc --benchmark-name=short --benchmark-sort=mean --benchmark-group-by=fullfunc --benchmark-storage=.benchmarks-kivy --benchmark-save=kivy"
markers = "incremental: mark a test as incremental."



[tool.cibuildwheel]
build = "cp313-* cp314-*"

[tool.cibuildwheel.macos]
before-all = " $(pwd)/tools/build_macos_dependencies.sh"
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} --ignore-missing-dependencies -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.macos.environment]
KIVY_DEPS_ROOT = "$(pwd)/kivy-dependencies"
KIVY_SPLIT_EXAMPLES = "1"
MACOSX_DEPLOYMENT_TARGET = "10.15"

[tool.cibuildwheel.android]
archs = "arm64_v8a x86_64"
before-build = "rm -rf {project}/build/lib.android-* {project}/build/temp.android-* {project}/build/bdist.android-*"
before-all = "$(pwd)/tools/build_android_dependencies.sh"
repair-wheel-command = "cp {wheel} {dest_dir}/ && python $(pwd)/tools/add-android-libs.py {dest_dir}"

[tool.cibuildwheel.android.environment]
#ANDROID_HOME = "/Volumes/CodeSSD/thorvg-development/kivy-thor-games/kivy-thor-games/.psproject/android-sdk"
#ANDROID_NDK_HOME = "/Volumes/CodeSSD/thorvg-development/kivy-thor-games/kivy-thor-games/.psproject/android-sdk/ndk/27.3.13750724"
ANDROID_API_LEVEL = "24"
KIVY_DEPS_ROOT = "$(pwd)/android-kivy-dependencies"
KIVY_SPLIT_EXAMPLES = "1"
KIVY_CROSS_PLATFORM = "android"

[tool.cibuildwheel.ios]
before-all = " $(pwd)/tools/build_ios_dependencies.sh"
repair-wheel-command = "cp {wheel} {dest_dir}/ && python $(pwd)/tools/add-ios-frameworks.py {dest_dir}"

[tool.cibuildwheel.ios.environment]
KIVY_DEPS_ROOT = "$(pwd)/ios-kivy-dependencies"
KIVY_SPLIT_EXAMPLES = "1"


# [tool.uv.sources]
# android = { path = "extra/android"}

