[project]
name = "test-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "psychowasp", email = "psychowaspx@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "kivy",
]

[project.scripts]
test-app = "test_app:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ksproject",
]

[tool.uv.sources]
ksproject = { git = "https://github.com/kivy-school/ksproject" }
#kivy = { workspace = true }

[tool.uv]
index-strategy = "unsafe-best-match"
find-links = ["../wheelhouse"]

[tool.uv.pip]
extra-index-url = [
    "https://pypi.anaconda.org/beeware/simple",
    "https://pypi.anaconda.org/pyswift/simple",
    "https://pypi.anaconda.org/kivyschool/simple"
]
find-links = ["../wheelhouse"]

#### kivy-school configuration ####

[tool.kivy-school]
app_name = "test_app"

[tool.kivy-school.ios]
bundle_id = "org.example.test_app"

[tool.kivy-school.macos]
bundle_id = "org.example.test_app"

[tool.kivy-school.android]
archs = ["arm64-v8a"]
package_name = "org.example.test_app"
api = 36
min_api = 24
sdk = "36"
ndk = "27.3.13750724" # check source.properties inside ndk-dir
ndk_api = 24
# sdk_path = "/path/to/android-sdk"
# ndk_path = "/path/to/android-sdk/ndk/27.3.13750724"
# java_path = "/path/to/jdk"
